5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1749_1540.log
== TEST (2019-05-15 19:47:04) 
-- CODE:
from math import *

x = eval(input("medida: "))
k = int(input("termos: "))
x1 = radians(x)
a = 1
ac = 0
while k >= a :
	a = cos(x1**0.5)
	ac = ac + a
	a = a + 1
	x = eval(input("medida: "))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:47:51) 
-- CODE:
from math import *

x = eval(input("medida: "))
k = int(input("termos: "))
x1 = radians(x)
a = 1
ac = 0
while k >= a :
	a = cos(x1**0.5)
	ac = ac + a
	a = a + 1
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:48:07) 
-- CODE:
from math import *

x = eval(input("medida: "))
k = int(input("termos: "))
x1 = radians(x)
a = 1
ac = 0
while k >= a :
	a = cos(x1**0.5)
	ac = ac + a
	a = a + 1
print(ac)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:49:23) 
-- CODE:
from math import *

x = eval(input("medida: "))
k = int(input("termos: "))
x1 = radians(x)
a = 1
ac = 0
while k >= a :
	a = cos(x1**0.5)
	ac = ac + a
	a = a + 1
print(round(ac, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:49:37) 
-- CODE:
from math import *

x = eval(input("medida: "))
k = int(input("termos: "))
x1 = radians(x)
a = 1
ac = 0
while k >= a :
	a = cos(x1**0.5)
	ac = ac + a
	a = a + 1
print(round(ac, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:50:21) 
-- CODE:
from math import *

x = eval(input("medida: "))
k = int(input("termos: "))
x1 = radians(x)
a = 1
ac = 0
while k >= a :
	a = cos(x1**0.5)
	ac = ac + a
	a = a + 1
print(round(ac, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:50:43) 
-- CODE:
from math import *

x = eval(input("medida: "))
k = int(input("termos: "))
x1 = raddians(x)
a = 1
ac = 0
while k >= a :
	a = cos(x1**0.5)
	ac = ac + a
	a = a + 1
print(round(ac, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x1 = raddians(x)
NameError: name 'raddians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:53:05) 
-- CODE:
from math import *

x = eval(input("medida: "))
k = int(input("termos: "))
x1 = radians(x)
a = 1
ac = 0
while k >= a :
	a = cos(x1**0.5)
	ac = ac + a
	a = a + 1
print(round(ac, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x1 = raddians(x)
NameError: name 'raddians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:54:07) 
-- CODE:
from math import *

x = eval(input("medida: "))
k = int(input("termos: "))
x1 = radians(x)
a = 1
ac = 0
while k >= a :
	a = cos(x1**0.5)+ 0.1
	ac = ac + a
	a = a + 1
print(round(ac, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x1 = raddians(x)
NameError: name 'raddians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
